alpha8
* Fixed Amalia quest
* Added Alistair mistress quest

alpha7
* Added DLC

alpha6
* Fixes for Denerim, Hero, Battle of Denerim

alpha5
* Fix for Landsmeet

alpha4
* Fix for Irving's fate

alpha3
* Fix for Loghain's fate

alpha2
* Added Windows GUI

alpha1
* Initial release