@@ -1,14 +1,14 @@
-VERSION="sanpshot"
+VERSION="alpha9"
 
 clean:
 	find . -type f -name "*.pyc" -delete
 	rm -rf DASaveReader dist
 	rm -f DASaveReader-*.zip
 
-zip: clean lint test
+zip: clean lint test clean
 	mkdir DASaveReader
 	mkdir dist
-	cp -r pygff/ choice/ README LICENSE *.py DASaveReader
+	cp -r pygff/ choice/ CHANGELOG README LICENSE *.py DASaveReader
 	zip -qr dist/DASaveReader-$(VERSION).zip DASaveReader
 	@echo "ZIP created"
 
