@@ -1,3 +1,6 @@
+alpha9
+* Fix for Loghain and Morrigan having an old god baby
+
 alpha8
 * Fixed Amalia quest
 * Added Alistair mistress quest
